# nb-canvas-quiz

./: .gitignore  Dockerfile  README.md  makefile  preview.html  pyproject.toml
.github/workflows/: build.yaml  publish.yaml  run-tests.yaml
examples/: README.md  assessment.yaml  testbank.ipynb  z2jh-values.yaml
examples/testbanks/: example.ipynb  makefile
nbquiz/: __init__.py  canvas_html.py  cli.py  testbank.py  testcase.py
nbquiz/runtime/: checker.proto  checker_pb2.py  checker_pb2_grpc.py  makefile
src/nbquiz/: __init__.py  question.py  quiz.py  testbank.py  testcase.py
src/nbquiz/canvas/: export.py  html.py
src/nbquiz/cli/: __init__.py  __main__.py  export.py  preview.py  server.py  test.py
src/nbquiz/resources/: cell_question_template.md  function_question_template.md  quiz_schema.yaml  test-notebook-template.ipynb
src/nbquiz/resources/canvas/: imsmanifest.xml
src/nbquiz/resources/canvas/assessment/: section.xml
src/nbquiz/runtime/: .gitignore  checker.proto  checker_pb2.py  checker_pb2.pyi  client.py  server.py
test/: README.md  z2jh-values.yaml
test_notebooks/: exam.ipynb
testbanks/: easy_questions.ipynb  exam.yaml  example.ipynb
tests/: makefile
