[project]
name = "nbquiz"
authors = [
    {name = "Mike Matera", email = "michael.matera@cabrillo.edu"},
]
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "jinja2", 
    "jupyterlab",
    "ipywidgets",
    "grpcio",
    "grpcio-tools",
    "myst_parser",
    "docutils",
    "cssutils",
    "minify_html",
    "pyyaml",
]

[tool.setuptools.package-data]
"nbquiz.resources" = ["*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
nbquiz = "nbquiz.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
